<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mafia</string>
    <string name="strings">Выбор ролей</string>
    <string name="peasant">Житель</string>
    <string name="don">Дон</string>
    <string name="mafia">Мафия</string>
    <string name="comissar">Комиссар</string>
    <string name="player">Игрок</string>
    <string name="set_nicknames">Set nicknames</string>
    <string name="new_game">New Game</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="player5">Player 5</string>
    <string name="player6">Player 6</string>
    <string name="player7">Player 7</string>
    <string name="player8">Player 8</string>
    <string name="player9">Player 9</string>
    <string name="player10">Player 10</string>
    <string name="on_vote_label">Выставлены: </string>
    <string name="continueButton">Continue</string>
    <string name="morning">Morning in the town</string>
    <string name="status_alive">Жив</string>
    <string name="status_killed">Убит</string>
    <string name="status_banished">Изгнан</string>
    <string name="number">№</string>
    <string name="nickname">Nick</string>
    <string name="Role">Role</string>
    <string name="Status">Status</string>
    <string name="Faults">F</string>
    <string name="fault_btn_txt">ФОЛ</string>
    <string name="vote_btn_txt">ВЫСТАВИТЬ</string>
    <string name="role_choose_Lbl">Выбор ролей</string>
    <string name="voting_for_lbl">Голосуем против: №</string>
    <string name="voting_lbl">Голосование</string>
    <string name="Nobody_on_vote">Никто не выставлен</string>
    <string name="Circle">Круг</string>
    <string name="StartTime">01:00</string>
    <string name="StartTimeForDuel">00:30</string>
    <string name="ok">Дальше</string>
    <string name="nightInTheCity">Сегодня ночью умрет:</string>
    <string name="duel">Перестрелка между:</string>
    <string name="LastMinOne">Прощальная речь игрока:</string>
    <string name="LastMin">Прощальная речь игроков:</string>
    <string name="sd">Download songs from SD</string>
    <string name="raw">Download Default Songs</string>
    <string name="stop">Stop(Doesnt working, maybe not needed)</string>
    <string name="play">Play/Pause</string>
    <string name="kill_duelants">Выгнать</string>
    <string name="release_duelants">Освободить</string>
    <string name="start_stop">Старт/Стоп</string>
</resources>
